# unitestagentapp

./: .gitignore  README.md  index.html  license  package-lock.json  package.json  pnpm-lock.yaml  testsill.py  vite.config.ts
.github/workflows/: ci.yml  publish.yml
docs/: .$architecture.drawio.bkp  arch_cn.drawio  architecture.drawio
resources/: saved.html
src/: main.ts
src-tauri/: Cargo.toml  Test.html  sss  tauri.conf.json  test_results.html
src-tauri/icons/: icon.icns
src-tauri/prompts/: mutation_analysis_prompt.toml  static_code_analysis.toml  static_code_analysis_cn copy.bak  static_code_analysis_cn.toml  test_generation_prompt.toml  test_generation_prompt.toml_bk  test_quality_scoring_prompt.toml  test_repair_prompt.toml
src-tauri/resources/: testJZ20_TZB_AllData.c  test_results.html
src-tauri/resources/x64/unitest_agent_bin/_internal/: config_loader.py  detection_generation_prompt_htzr_cn.toml
src-tauri/resources/x64/unitest_agent_bin/_internal/jsonschema-4.23.0.dist-info/: RECORD
src-tauri/resources/x64/unitest_agent_bin/_internal/litellm-1.44.23.dist-info/: RECORD
src-tauri/resources/x64/unitest_agent_bin/_internal/unitest_agent/: CoverageProcessor.py  CustomLogger.py  FilePreprocessor.py  PromptBuilder.py  ReportGenerator.py  ReportGenerator_htzr_cn.py  Runner.py  UnitestAgent.py  UnitestAgentTestGenerator.py  __init__.py  llmAgent.py  llmCaller.py  llmRequest.py  test_generation_prompt_htzr_cn copy 2.toml  test_generation_prompt_htzr_cn.toml  utils.py
src-tauri/resources/x64_win/unitest_agent_bin/_internal/: detection_generation_prompt_htzr_cn.toml  test_generation_prompt_htzr_cn copy 2.toml
src-tauri/resources/x64_win/unitest_agent_bin/_internal/jsonschema-4.23.0.dist-info/: RECORD
src-tauri/resources/x64_win/unitest_agent_bin/_internal/litellm-1.44.23.dist-info/: RECORD
src-tauri/resources/x64_win/unitest_agent_bin/_internal/unitest_agent/: CoverageProcessor.py  CustomLogger.py  FilePreprocessor.py  PromptBuilder.py  ReportGenerator.py  ReportGenerator_htzr_cn.py  Runner.py  UnitestAgent.py  UnitestAgentTestGenerator.py  __init__.py  analyze_suite_test_headers_indentation.toml  analyze_suite_test_insert_line.toml  config_loader.py  language_extensions.toml  llmAgent.py  llmCaller.py  llmRequest.py  model_register.py  test_generation_prompt.toml  test_generation_prompt_htzr_cn copy.toml  test_generation_prompt_htzr_cn.toml  utils.py
src-tauri/src/: main.rs
src-tauri/src/app/: builder.rs  mod.rs
src-tauri/src/app/cmd/: download.rs  gpt.rs  window.rs
src-tauri/src/app/uagent/: ai_caller.rs  ai_local.rs  code_analysis.rs  config_setting.rs  coverage_processor.rs  custom_logger.rs  file_preprocessor.rs  main.rs  main.rs_bk  mod.rs  progress.rs  prompt_builder.rs  report_generator.rs  report_generator_副本.rs  runner.rs  unitest.rs  unitest_agent.rs  unitest_agent_test_generator.rs  utils.rs
src-tauri/src/app/uagent/templates/: code_analysis_report.html
src-tauri/src/app/unitestagent/: FilePreprocessor.rs  coverage_processor.rs  custom_logger.rs  llm_caller.rs  mod.rs  prompt_builder.rs  prompt_builder.rs_bk  reportgenerator.rs  runner.rs  unitest_agent.rs  unitest_agent_test_generator.rs  utils.rs
src-tauri/src/app/unitestagent/settings/: config_loader.rs  mod.rs  test_generation_prompt_htzr_cn copy.toml
src/api/: index.ts
src/components/common/: index.ts
src/components/common/ProjStore/: index.vue
src/components/common/Setting/: About.vue  User.vue  index.vue
src/components/common/UserAvatar/: index.vue
src/locales/: zh-CN.ts  zh-TW.ts
src/router/: index.ts
src/store/modules/: index.ts
src/store/modules/chat/: helper.ts  index.ts
src/store/modules/project/: helper.ts  index.ts
src/store/modules/unitest/: helper.ts  index.ts
src/store/modules/unitestagent/: helper.ts  index.ts
src/typings/: chat.d.ts  unitest.d.ts
src/views/auth/: Login.vue
src/views/chat/: index.vue
src/views/chat/hooks/: useScroll.ts
src/views/unitest/: index.vue  index.vue_bk
src/views/unitest/components/Header/: index.vue
src/views/unitest/hooks/: useChat.ts  useScroll.ts
src/views/unitest/layout/sider/: Footer.vue  List.vue  index.vue
