[package]
name = "unitestagent"
version = "0.1.0"
description = "代码静态检查工具"
authors = ["Eric Du"]
license = ""
repository = ""
default-run = "unitestagent"
edition = "2021"
rust-version = "1.59"


[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[profile.dev]
debug = true

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["api-all"] }
tauri-plugin-log = { git = "https://github.com/lencx/tauri-plugins-workspace", branch = "dev", features = ["colored"] }
tokio = "1.26.0"
reqwest = { version="0.11.14", features= ["stream", "socks"] }
rocket = {"git" = "https://github.com/SergioBenitez/Rocket"}
bytes = "*"
tokio-util = {version="0.7.7", feature= ["io"] }
futures = "0.3.27"
eventsource-stream = "0.2.3"
futures-util = "0.3.27"
thiserror = "1.0.39"
log = "0.4.17"
log4rs = "1.0"
regex = "1.5.4"  # 可以选择最新版本
serde_yaml = "0.8"  # 或者选择最新版本
xml = "0.8.20"
csv = "1.0.0"
tera = "1.19.0"  # Use the latest version available
config = "0.13.0"
html2text = "0.5.0"
docx-rs = "0.4.17"
scraper = "0.12.0"
html5ever = "0.25"
markup5ever = "0.10"
select = "0.6" # 用于解析 HTML
simplelog = "0.12"
langchain-rust = "4.6.0"
toml = "0.5"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
